--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     height: 100vh;
     margin: 0;
     background-color: #1b1b32;
-      color: #f5f6f7;
+      color: blue;
     font-family: Tahoma;
       font-size: 16px;
   }
